--- a/extensions/positron-python/src/datascience-ui/history-react/code.css
+++ b/extensions/positron-python/src/datascience-ui/history-react/code.css
@@ -31,6 +31,7 @@
 .code-area {
     position: relative;
     width:100%;
+    margin-bottom:16px;
 }
 
 .code-area-editable {
@@ -45,8 +46,3 @@
     font-style: italic;
     color: var(--override-watermark-color, var(--vscode-pickerGroup-border));
 }
-
-.hide {
-    visibility: hidden;
-}
-
