--- a/extensions/positron-python/src/datascience-ui/history-react/mainPanel.css
+++ b/extensions/positron-python/src/datascience-ui/history-react/mainPanel.css
@@ -15,3 +15,11 @@
     background: var(--override-background, var(--vscode-editor-background));
     color: var(--override-foreground, var(--vscode-editor-foreground));
 }
+
+.hide {
+    display: none;
+}
+
+.invisible {
+    visibility: hidden;
+}
